gpu/nvidia: Discover data fields based on headers

This guards us against the appearance of new fields or if they
ever appear in a different order.
BUG:470474
FIXED-IN:5.27.7